<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="app_name">GoBLu</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to any device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="title_connected_to">connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">Select Device</string>
    <string name="none_paired">No device have been paired</string>
    <string name="none_found">No device found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for a device</string>
    <string name="secure_connect">Connect</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="changebackground">Change Background</string>
    <string name="changeBubble">Change Bubble</string>
    <string name="changefont">Change Font</string>
    <string name="sendimage">Send Image</string>
    <string name="typing">typing...</string>
    <string name="pressback">Press Back button once more to exit.</string>
    <string name="gallery">Gallery</string>
    <string name="app">App</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="appshare">Select Application</string>
    <string name="likefb">Like us on Facebook</string>
    <string name="rate">Rate us</string>
    <string name="aboutdev">About Developer :</string>
    <string name="story">This application is my final year project of our college and its appriciated by my teachers and same response we are getting from my friends.I \'Sneha R.Zagade\' is the director,producer of the project.Your response will be motivative for me. Adios!! :P .</string>
    <string name="aboutus">About us</string>
</resources>
